--- a/public/assets/css/estilos.css
+++ b/public/assets/css/estilos.css
@@ -1,5 +1,3 @@
-
-
 .borde-principal {
     border: 20px;
     border-color: #20b2aa;
@@ -12,7 +10,9 @@
 
 .border-demo {
     background-color: rgba(255, 255, 255, 0.542);
-    border: 5px solid rgba(63, 66, 61, 0.549);
+    border: 5px solid rgba(0, 191, 255, 0.719);
+    -webkit-box-shadow: 14px 9px 15px 6px rgba(0, 0, 0, 0.98);
+    box-shadow: 14px 9px 15px 6px rgba(0, 0, 0, 0.98);
     border-radius: 18px;
 }
 
