--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,15 +10,26 @@ body {
     font-weight: 300;
     color: var(--prymary);
 }
-a{
+a {
     text-decoration: none;
 }
-a:hover{
-    text-decoration: underline;
+@keyframes myAnim {
+    0% {
+        transform: scale(0.5);
+        transform-origin: 0% 50%;
+    }
+
+    100% {
+        transform: scale(1);
+        transform-origin: 0% 50%;
+    }
+}
+#sidebar-container a:hover {
+    animation: myAnim 200ms linear 0s 1 normal none;
 }
 
 .bg-primary {
-    background-color: #266ab1!important;
+    background-color: #266ab1 !important;
 }
 #sidebar-container {
     min-height: 100vh;
@@ -29,4 +40,17 @@ a:hover{
 #sidebar-container .menu {
     width: 14rem;
 }
+svg {
+    margin-right: 5px;
+}
+#content{
+    overflow-y:auto ;
+    height: 100vh;
+    padding: 5rem;
+}
 
+@media (max-width: 768px) {
+    #sidebar-container {
+    display: none;
+    }
+}
